Fix overflow x

--- a/src/components/Toggle/styles/styles.scss
+++ b/src/components/Toggle/styles/styles.scss
@@ -58,7 +58,7 @@
       display: block;
 
       @media (#{ $phone }) {
-        width: 309px;
+        width: 300px;
         height: 50px;
 
         background: url(../files/bar-phone.png);
